Fix: activity card overflow

--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -154,4 +154,5 @@ a.p-card-body-Activity {
 
 .activity-card {
     overflow-y: hidden;
+    height: 355px;
 }
